Replaced PNG legend with HTML legend. Updated CSV writing functionality.